🐛 fix(sidemenu):  suppression variante et correctif style bouton mobile [DS-3375, DS-3376] (#660)
- Suppression de la variante avec bordure
- Corrige le style du bouton mobile en action-high-blue-france (cohérence navigation/accordion)

--- a/src/component/sidemenu/style/_scheme.scss
+++ b/src/component/sidemenu/style/_scheme.scss
@@ -57,17 +57,11 @@
           @include color.box-shadow(default grey, (legacy:$legacy), left-1-in);
         }
       }
-
-      &--full-border {
-        #{ns(sidemenu__inner)} {
-          @include color.box-shadow(default grey, (legacy:$legacy));
-        }
-      }
     }
 
     &__link,
     &__btn {
-      @include color.text(action-high grey, (legacy:$legacy));
+      @include color.text(action-high blue-france, (legacy:$legacy));
 
       &[aria-current] {
         @include color.text(active blue-france, (legacy:$legacy));
